--- a/TTB_PCB_PQM/IFM/Views/NIDEC/SMT/View_STM_Final_Check.resx
+++ b/TTB_PCB_PQM/IFM/Views/NIDEC/SMT/View_STM_Final_Check.resx
@@ -183,4 +183,7 @@
         rkJggg==
 </value>
   </data>
+  <metadata name="Timer_colorchange.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
